[build-system]
requires = ["setuptools>=52.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfE -q --cov=interleave_playlist --cov-report html"
testpaths = [
    "test",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
