[build-system]
requires = ["setuptools>=52.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rfE -q --cov=interleave_playlist --cov-report html --cov-report xml"
testpaths = [
    "test",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
