[metadata]
name = Interleave Playlist
version = 1.0.0-alpha7
description = Interleave episodes of the shows you watch to maximize variety when catching up
keywords = interleave, playlist, episode, show
author = Thomas Sweeney
license = GPL3+
platforms = linux, osx, unix, windows
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: End Users/Desktop
    Natural Language :: English

[options]
python_requires = >=3.9
install_requires =
    ruamel.yaml~=0.17.17
    PySide6~=6.2.0
    pymediainfo~=5.1.0
    crontab~=0.23.0
    natsort~=8.2.0

[options.extras_require]
testing =
    pytest~=7.1.3
    pytest-mock~=3.10.0

[options.package_data]
interleave_playlist = py.typed
