[metadata]
name = Interleave Playlist
version = 1.0.0-alpha9
long_description = Interleave episodes of the shows you watch to maximize variety when catching up
keywords = interleave, playlist, episode, show
author = Thomas Sweeney
license = GPL3+
platforms = linux, osx, unix, windows
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Intended Audience :: End Users/Desktop
    Natural Language :: English

[options]
include_package_data = True
python_requires = >=3.9
install_requires =
    ruamel.yaml~=0.18.6
    PySide6~=6.8.0
    pymediainfo~=7.0.1
    crontab~=1.0.1
    natsort~=8.4.0
    appdirs~=1.4.4

[options.extras_require]
testing =
    pytest~=8.3.2
    pytest-mock~=3.14.0
    pytest-cov~=6.0.0
    flake8~=7.1.1
    mypy
    IceSpringPySideStubs-PySide6~=1.3.1
    tox~=4.24.1
    freezegun~=1.5.1
    pre-commit~=4.1.0
    mkdocs~=1.6.0

[options.package_data]
interleave_playlist =
    py.typed

[flake8]
max-line-length = 100
